--- a/media/css/highlight.css
+++ b/media/css/highlight.css
@@ -1,61 +1,69 @@
-.hll { background-color: #ffffcc }
-.c { color: #60a0b0; font-style: italic } /* Comment */
-.err { border: 1px solid #FF0000 } /* Error */
-.k { color: #007020; font-weight: bold } /* Keyword */
-.o { color: #666666 } /* Operator */
-.cm { color: #60a0b0; font-style: italic } /* Comment.Multiline */
-.cp { color: #007020 } /* Comment.Preproc */
-.c1 { color: #60a0b0; font-style: italic } /* Comment.Single */
-.cs { color: #60a0b0; background-color: #fff0f0 } /* Comment.Special */
-.gd { color: #A00000 } /* Generic.Deleted */
-.ge { font-style: italic } /* Generic.Emph */
+.hll { background-color: #222222 }
+.c { color: #000080 } /* Comment */
+.err { color: #cccccc; border: 1px solid #FF0000 } /* Error */
+.g { color: #cccccc } /* Generic */
+.k { color: #cdcd00 } /* Keyword */
+.l { color: #cccccc } /* Literal */
+.n { color: #cccccc } /* Name */
+.o { color: #3399cc } /* Operator */
+.x { color: #cccccc } /* Other */
+.p { color: #cccccc } /* Punctuation */
+.cm { color: #000080 } /* Comment.Multiline */
+.cp { color: #000080 } /* Comment.Preproc */
+.c1 { color: #000080 } /* Comment.Single */
+.cs { color: #cd0000; font-weight: bold } /* Comment.Special */
+.gd { color: #cd0000 } /* Generic.Deleted */
+.ge { color: #cccccc; font-style: italic } /* Generic.Emph */
 .gr { color: #FF0000 } /* Generic.Error */
 .gh { color: #000080; font-weight: bold } /* Generic.Heading */
-.gi { color: #00A000 } /* Generic.Inserted */
+.gi { color: #00cd00 } /* Generic.Inserted */
 .go { color: #888888 } /* Generic.Output */
-.gp { color: #c65d09; font-weight: bold } /* Generic.Prompt */
-.gs { font-weight: bold } /* Generic.Strong */
+.gp { color: #000080; font-weight: bold } /* Generic.Prompt */
+.gs { color: #cccccc; font-weight: bold } /* Generic.Strong */
 .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
 .gt { color: #0044DD } /* Generic.Traceback */
-.kc { color: #007020; font-weight: bold } /* Keyword.Constant */
-.kd { color: #007020; font-weight: bold } /* Keyword.Declaration */
-.kn { color: #007020; font-weight: bold } /* Keyword.Namespace */
-.kp { color: #007020 } /* Keyword.Pseudo */
-.kr { color: #007020; font-weight: bold } /* Keyword.Reserved */
-.kt { color: #902000 } /* Keyword.Type */
-.m { color: #40a070 } /* Literal.Number */
-.s { color: #4070a0 } /* Literal.String */
-.na { color: #4070a0 } /* Name.Attribute */
-.nb { color: #007020 } /* Name.Builtin */
-.nc { color: #0e84b5; font-weight: bold } /* Name.Class */
-.no { color: #60add5 } /* Name.Constant */
-.nd { color: #555555; font-weight: bold } /* Name.Decorator */
-.ni { color: #d55537; font-weight: bold } /* Name.Entity */
-.ne { color: #007020 } /* Name.Exception */
-.nf { color: #06287e } /* Name.Function */
-.nl { color: #002070; font-weight: bold } /* Name.Label */
-.nn { color: #0e84b5; font-weight: bold } /* Name.Namespace */
-.nt { color: #062873; font-weight: bold } /* Name.Tag */
-.nv { color: #bb60d5 } /* Name.Variable */
-.ow { color: #007020; font-weight: bold } /* Operator.Word */
-.w { color: #bbbbbb } /* Text.Whitespace */
-.mf { color: #40a070 } /* Literal.Number.Float */
-.mh { color: #40a070 } /* Literal.Number.Hex */
-.mi { color: #40a070 } /* Literal.Number.Integer */
-.mo { color: #40a070 } /* Literal.Number.Oct */
-.sb { color: #4070a0 } /* Literal.String.Backtick */
-.sc { color: #4070a0 } /* Literal.String.Char */
-.sd { color: #4070a0; font-style: italic } /* Literal.String.Doc */
-.s2 { color: #4070a0 } /* Literal.String.Double */
-.se { color: #4070a0; font-weight: bold } /* Literal.String.Escape */
-.sh { color: #4070a0 } /* Literal.String.Heredoc */
-.si { color: #70a0d0; font-style: italic } /* Literal.String.Interpol */
-.sx { color: #c65d09 } /* Literal.String.Other */
-.sr { color: #235388 } /* Literal.String.Regex */
-.s1 { color: #4070a0 } /* Literal.String.Single */
-.ss { color: #517918 } /* Literal.String.Symbol */
-.bp { color: #007020 } /* Name.Builtin.Pseudo */
-.vc { color: #bb60d5 } /* Name.Variable.Class */
-.vg { color: #bb60d5 } /* Name.Variable.Global */
-.vi { color: #bb60d5 } /* Name.Variable.Instance */
-.il { color: #40a070 } /* Literal.Number.Integer.Long */
+.kc { color: #cdcd00 } /* Keyword.Constant */
+.kd { color: #00cd00 } /* Keyword.Declaration */
+.kn { color: #cd00cd } /* Keyword.Namespace */
+.kp { color: #cdcd00 } /* Keyword.Pseudo */
+.kr { color: #cdcd00 } /* Keyword.Reserved */
+.kt { color: #00cd00 } /* Keyword.Type */
+.ld { color: #cccccc } /* Literal.Date */
+.m { color: #cd00cd } /* Literal.Number */
+.s { color: #cd0000 } /* Literal.String */
+.na { color: #cccccc } /* Name.Attribute */
+.nb { color: #cd00cd } /* Name.Builtin */
+.nc { color: #00cdcd } /* Name.Class */
+.no { color: #cccccc } /* Name.Constant */
+.nd { color: #cccccc } /* Name.Decorator */
+.ni { color: #cccccc } /* Name.Entity */
+.ne { color: #666699; font-weight: bold } /* Name.Exception */
+.nf { color: #cccccc } /* Name.Function */
+.nl { color: #cccccc } /* Name.Label */
+.nn { color: #cccccc } /* Name.Namespace */
+.nx { color: #cccccc } /* Name.Other */
+.py { color: #cccccc } /* Name.Property */
+.nt { color: #cccccc } /* Name.Tag */
+.nv { color: #00cdcd } /* Name.Variable */
+.ow { color: #cdcd00 } /* Operator.Word */
+.w { color: #cccccc } /* Text.Whitespace */
+.mf { color: #cd00cd } /* Literal.Number.Float */
+.mh { color: #cd00cd } /* Literal.Number.Hex */
+.mi { color: #cd00cd } /* Literal.Number.Integer */
+.mo { color: #cd00cd } /* Literal.Number.Oct */
+.sb { color: #cd0000 } /* Literal.String.Backtick */
+.sc { color: #cd0000 } /* Literal.String.Char */
+.sd { color: #cd0000 } /* Literal.String.Doc */
+.s2 { color: #cd0000 } /* Literal.String.Double */
+.se { color: #cd0000 } /* Literal.String.Escape */
+.sh { color: #cd0000 } /* Literal.String.Heredoc */
+.si { color: #cd0000 } /* Literal.String.Interpol */
+.sx { color: #cd0000 } /* Literal.String.Other */
+.sr { color: #cd0000 } /* Literal.String.Regex */
+.s1 { color: #cd0000 } /* Literal.String.Single */
+.ss { color: #cd0000 } /* Literal.String.Symbol */
+.bp { color: #cd00cd } /* Name.Builtin.Pseudo */
+.vc { color: #00cdcd } /* Name.Variable.Class */
+.vg { color: #00cdcd } /* Name.Variable.Global */
+.vi { color: #00cdcd } /* Name.Variable.Instance */
+.il { color: #cd00cd } /* Literal.Number.Integer.Long */
